# kinderror

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: macro_tests.rs
