[package]
name = "kinderror"
version = "0.1.3"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
description = "An io::Error style kind Error derive macro"
keywords = ["error", "proc_macro", "procmacro"]
edition = "2024"
license = "MIT"
repository = "https://github.com/Sherlock-Holo/kinderror"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.43"
syn = "2.0.114"
